data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1254.wast
;; 5. **Loop Modifying Stack Inside Imported Function Call**:    - Test a loop that modifies the operand stack, calls an imported function to further manipulate the stack, and then resumes the loop execution. Ensure the transition correctly maintains stack integrity.    - **Constraint**: Validates proper stack state maintenance and correct loop execution flow post function call.

(assert_invalid
  (module
    (func $type-value-modify-stack-inside-call
      (loop $myloop
        (call_imported_func)
        (i32.const 1)
        (br $myloop)
      )
    )
    (import "env" "call_imported_func" (func))
  )
  "stack type mismatch"
)